--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -5,8 +5,19 @@ jobs:
             runs-on: ubuntu-latest
             steps: 
                - name: Get Code
-                 run : |
-                   echo "Cloning repo .."
-                   echo "${{toJson(github)}}"
-                   git clone  https://github.com/${{github.repository}}.git
+                 uses: actions/checkout@v4
+
+               - name: Install node js 
+                 uses: actions/setup-node@v4
+                 with:
+                   node-version: 20
+                   
+               - name: print node version
+                 run: node -v
+                 
+               - name: Install dependencies
+                 run : npm ci
+
+               - name: run Tests
+                 run: npm run test   
                             
