--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -5,6 +5,10 @@ jobs:
             runs-on: ubuntu-latest
             steps: 
                - name: Get Code
+                #  run : |
+                #    echo "Cloning repo .."
+                #    echo "${{toJson(github)}}"
+                #    git clone  https://github.com/${{github.repository}}.git
                  uses: actions/checkout@v4
 
                - name: Install node js 
