--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -24,4 +24,21 @@ jobs:
 
                - name: run Tests
                  run: npm run test   
+     deploy:
+             runs-on: ubuntu-latest    
+             steps: 
+               - name: Get Code
+                 uses: actions/checkout@v4
+
+               - name: Install node js 
+                 uses: actions/setup-node@v4
+                 with:
+                   node-version: 20
                             
+               - name: Install dependencies
+                 run : npm ci
+
+               - name: building Project
+                 run: npm run build   
+               - name: building Project
+                 run: echo "deplyed successfully"
