made sequential change

--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -25,8 +25,9 @@ jobs:
                - name: run Tests
                  run: npm run test   
      deploy:
-             runs-on: ubuntu-latest    
-             steps: 
+            needs: test 
+            runs-on: ubuntu-latest    
+            steps: 
                - name: Get Code
                  uses: actions/checkout@v4
 
