--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -39,10 +39,11 @@ jobs:
                  run : npm ci
 
                - name: run Tests
-                 run: npm run test   
-     deploy:
+                 run: npm run test 
+                 
+     build:
             needs: test 
-            runs-on: ubuntu-latest    
+            runs-on: ubuntu-latest 
             steps: 
                - name: Get Code
                  uses: actions/checkout@v4
@@ -62,6 +63,20 @@ jobs:
                  run : npm ci
 
                - name: building Project
-                 run: npm run build   
+                 run: npm run build     
+               - name: Upload dist Artifact
+                 uses: actions/upload-artifact@v4  
+                 with:
+                      name: dist-file
+                      path: dist
+     deploy:
+            needs: build 
+            runs-on: ubuntu-latest    
+            steps: 
+               - name: Download Dist Artifact
+                 uses: actions/download-artifact@v4  
+                 with:
+                      name: dist-file
+                      path: dist
                - name: building Project
                  run: echo "deplyed successfully"
